# nvidia-sports-cv-pipeline

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  test_clip_2_cut.mp4:Zone.Identifier
src/: main_yolo.py  realtime_overlay.py  yolo_benchmark.py  yolox
src/analytics/: __init__.py  possession.py
src/assign_acquisition/: assign_acquisition.py
src/assign_team/: assign_team.py
src/camera_motion/: camera_motion.py
src/data_scripts/: download_dataset.py
src/detection/: yolo_wrapper.py
src/inference/: temp.py  test_video.py
src/overlays/: overlay_helper.py
src/speed_distance/: speed_distance.py
src/trackers/: tracker.py
src/tracking/: tracker.py
src/train/: export_trt.py  train_yolo.py
src/utils/: __init__.py  realtime_helper.py  video_utils.py
