[tool.poetry]
name = "sport-cv-pipeline"
version = "0.1.0"
description = ""
authors = ["Srinivas Harish <srinivas7992@gmail.com>"]
readme = "README.md"
packages = [
    { include = "detection", from = "src" },
    { include = "tracking", from = "src" },
    { include = "motion", from = "src" },
    { include = "stats", from = "src" },
    { include = "transform", from = "src" },
    { include = "utils", from = "src" },
    { include = "classification", from = "src" },
    { include = "train", from = "src" },
    { include = "inference", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.3.155"
opencv-python = "^4.11.0.86"
numpy = "^2.3.0"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
scikit-learn = "^1.7.0"
filterpy = "^1.4.5"
roboflow = "^1.1.66" 


torch = { version = "*", allow-prereleases = true }
torchvision = { version = "*", allow-prereleases = true }
torchaudio = { version = "*", allow-prereleases = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
